// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalLastUpdateInfo /> renders not updated 1`] = `<div />`;

exports[`<ProposalLastUpdateInfo /> renders updated  without author 1`] = `
<div>
  <FormattedDate
    day="numeric"
    hour="numeric"
    minute="numeric"
    month="long"
    value={2017-07-10T16:53:58.000Z}
    year="numeric"
  />
</div>
`;

exports[`<ProposalLastUpdateInfo /> renders updated 1`] = `
<div>
  <FormattedDate
    day="numeric"
    hour="numeric"
    minute="numeric"
    month="long"
    value={2017-07-10T16:53:58.000Z}
    year="numeric"
  />
  <div>
    <FormattedMessage
      id="global.written_by"
      values={Object {}}
    />
     
    <a
      href="http://capco.dev"
    >
      Paul
    </a>
  </div>
</div>
`;
